<resources>
    <string name="app_name">minilook</string>
    <string name="base_slogan">소중한 아이를 위한 특별한 선물</string>
    <string name="base_yes">네</string>
    <string name="base_no">아니오</string>
    <string name="base_percent">%d%%</string>
    <string name="base_brand_shop">브랜드샵</string>
    <string name="base_tag">#%s</string>
    <string name="base_pattern">^[ㄱ-ㅣ가-힣]*$</string>
    <string name="base_cancel">취소</string>
    <string name="base_ok">완료</string>
    <string name="toast_app_finish">뒤로 가기 버튼을 한 번 더 누르면 종료됩니다</string>
    <string name="toast_marketing_info_agree">마케팅 알림이 수신동의 되었습니다</string>
    <string name="toast_marketing_info_disagree">마케팅 알림이 수신거부 되었습니다</string>
    <string name="toast_order_info_agree">정보성 알림이 수신동의 되었습니다</string>
    <string name="toast_order_info_disagree">정보성 알림이 수신거부 되었습니다</string>
    <string name="toast_login">로그인 되었습니다</string>
    <string name="toast_logout">로그아웃 되었습니다</string>
    <string name="toast_nick_update_completed">닉네임이 변경되었습니다</string>
    <string name="toast_add_shoppingbag">장바구니에 담았습니다</string>
    <string name="toast_receipt_completed">접수 되었습니다.</string>
    <string name="toast_question_write">문의가 등록되었습니다.</string>
    <string name="bottombar_lookbook">룩북</string>
    <string name="bottombar_market">마켓</string>
    <string name="bottombar_category">카테고리</string>
    <string name="bottombar_challenge">챌린지</string>
    <string name="bottombar_ipage">아이페이지</string>
    <string name="guide_desc1">스타일리쉬한 코디를\n한눈에 볼 수 있는 룩북</string>
    <string name="guide_desc1_b">룩북</string>
    <string name="guide_desc2">브랜드만의 이야기가 담겨있는\n브랜드페이지</string>
    <string name="guide_desc2_b">브랜드페이지</string>
    <string name="guide_desc3">우리 아이에게 딱 맞는 상품을\n추천해주는 AI 큐레이션</string>
    <string name="guide_desc3_b">AI 큐레이션</string>
    <string name="guide_desc4">유니크하고 트렌디한 상품을\n미리 만나는 프리오더</string>
    <string name="guide_desc4_b">프리오더</string>
    <string name="guide_start">시작하기</string>
    <string name="guide_skip">건너뛰기</string>
    <string name="login_title">로그인</string>
    <string name="login_desc">맞춤 추천 서비스, 포인트 적립 등\n미니룩의 전체 서비스를 이용해 보세요.</string>
    <string name="login_naver">네이버로 시작하기</string>
    <string name="login_kakao">카카오로 시작하기</string>
    <string name="join_title">회원가입</string>
    <string name="join_chain_naver">네이버 계정으로 연결됨</string>
    <string name="join_chain_kakao">카카오 계정으로 연결됨</string>
    <string name="join_certify">휴대폰 본인인증하기</string>
    <string name="join_certify_completed">본인인증완료</string>
    <string name="join_full_agree">약관 전체동의</string>
    <string name="join_terms_of_use">[필수] 이용약관</string>
    <string name="join_privacy_policy">[필수] 개인정보처리방침</string>
    <string name="join_commercial_info">[선택] 광고성 정보 수신 동의</string>
    <string name="join_view_detail">보기</string>
    <string name="join_ok">가입하기</string>
    <string name="leave_title">회원탈퇴</string>
    <string name="leave_info">탈퇴 전 반드시 확인하세요.</string>
    <string name="leave_info_desc">현재 보유 중인 포인트와 쿠폰은 모두 소멸되며 재가입 후에도 복구할 수 없습니다.</string>
    <string name="leave_info_desc_b">포인트와 쿠폰은 모두 소멸</string>
    <string name="leave_point_caption">잔여 포인트</string>
    <string name="leave_point">%sP</string>
    <string name="leave_coupon_caption">잔여 쿠폰</string>
    <string name="leave_coupon">%s장</string>
    <string name="leave_rejoin_info">회원탈퇴 시 계정과 관련된 정보는 복구 불가하며 31일 이후 재가입 가능합니다.</string>
    <string name="leave_ok">탈퇴하기</string>
    <string name="market_commercial_index">%d/%d</string>
    <string name="market_limited_desc">매일 오전 9시 오픈되는 한정 할인 상품</string>
    <string name="market_brand_more">전체보기</string>
    <string name="market_brand_go_detail">브랜드샵으로 이동하기</string>
    <string name="market_filter_title">다양한 필터로 상품을 찾아보세요</string>
    <string name="market_filter_more">필터 전체보기</string>
    <string name="promotion_detail_title">기획전</string>
    <string name="promotion_total">총 %d개 상품</string>
    <string name="promotion_total_b">%d개</string>
    <string name="promotion_together">같이보면 좋은 기획전</string>
    <string name="event_detail_title">이벤트</string>
    <string name="event_ing">진행 중인 이벤트</string>
    <string name="category_title">카테고리</string>
    <string name="ipage_profile_login">로그인/회원가입</string>
    <string name="ipage_profile_point_caption">포인트</string>
    <string name="ipage_profile_point">%sP</string>
    <string name="ipage_profile_coupon_caption">쿠폰</string>
    <string name="ipage_profile_coupon">%s장</string>
    <string name="ipage_shopping_scrap">스크랩</string>
    <string name="ipage_shopping_basket">장바구니</string>
    <string name="ipage_shopping_recent">최근 본 상품</string>
    <string name="ipage_shopping_question">상품문의</string>
    <string name="ipage_shopping_review">상품리뷰</string>
    <string name="ipage_shopping_max_count">99+</string>
    <string name="ipage_shopping_order_title">주문/배송</string>
    <string name="ipage_shopping_order_more">전체보기</string>
    <string name="ipage_shopping_order_complete_caption">주문완료</string>
    <string name="ipage_shopping_order_packing_caption">배송준비중</string>
    <string name="ipage_shopping_order_delivery_caption">배송중</string>
    <string name="ipage_shopping_order_delivery_completed_caption">배송완료</string>
    <string name="ipage_service_question_title">문의내역</string>
    <string name="ipage_service_question_desc">상품/주문/배송·교환·환불</string>
    <string name="ipage_service_notice">공지사항</string>
    <string name="ipage_service_faq">FAQ</string>
    <string name="ipage_app_info">미니룩은 통신판매중개자로서 통신판매 당사자가 아니며, 판매자가 등록한 상품정보 및 거래에 미니룩은 책임을 지지 않습니다.</string>
    <string name="profile_title">정보 관리</string>
    <string name="profile_nick_caption">닉네임</string>
    <string name="profile_nick_hint" />
    <string name="profile_nick_save">저장</string>
    <string name="profile_nick_check_already">이미 사용 중인 닉네임입니다.</string>
    <string name="profile_nick_check_available">사용 가능한 닉네임입니다.</string>
    <string name="profile_nick_check_unavailable">사용할 수 없는 닉네임입니다.</string>
    <string name="profile_phone_caption">연락처</string>
    <string name="profile_email_caption">이메일</string>
    <string name="profile_shipping_caption">기본배송지 정보</string>
    <string name="profile_shipping_address">(%s) %s, %s</string>
    <string name="profile_shipping_empty">등록된 기본배송지가 없습니다.</string>
    <string name="profile_edit">변경</string>
    <string name="profile_management">관리</string>
    <string name="shipping_title">배송지</string>
    <string name="shipping_add">추가하기</string>
    <string name="shipping_default">기본배송지</string>
    <string name="shipping_address">(%s) %s, %s</string>
    <string name="shipping_edit">수정</string>
    <string name="shipping_empty">배송지가 없습니다.</string>
    <string name="shipping_empty_button">추가하기</string>
    <string name="shipping_default_shipping">기본배송지로 등록하시겠습니까?</string>
    <string name="shipping_add_title">배송지 추가</string>
    <string name="shipping_edit_title">배송지 수정</string>
    <string name="shipping_input_name_caption">수령인</string>
    <string name="shipping_input_name_hint">받는 분 입력</string>
    <string name="shipping_input_phone_caption">연락처</string>
    <string name="shipping_input_phone_hint">- 없이 입력</string>
    <string name="shipping_input_address_caption">배송지</string>
    <string name="shipping_input_address_zip_hint">우편번호</string>
    <string name="shipping_input_address_zip_search">우편번호 검색</string>
    <string name="shipping_input_address_hint">기본주소</string>
    <string name="shipping_input_address_detail_hint">상세주소 입력</string>
    <string name="shipping_input_check_default">기본배송지로 등록</string>
    <string name="shipping_input_save">저장하기</string>
    <string name="question_title">상품문의</string>
    <string name="question_type">[%s]</string>
    <string name="question_unanswered">미답변</string>
    <string name="question_answer_completed">답변완료</string>
    <string name="question_my_question">내 문의</string>
    <string name="question_secret">비밀글입니다.</string>
    <string name="question_answering">판매자님이 답변 중입니다.</string>
    <string name="question_edit">수정</string>
    <string name="question_delete">삭제</string>
    <string name="question_empty">등록된 문의가 없습니다.</string>
    <string name="question_empty_button">문의하기</string>
    <string name="question_write_title">문의 작성</string>
    <string name="question_write_type_caption">문의유형</string>
    <string name="question_write_content_caption">문의내용</string>
    <string name="question_write_contents_hint">상품 문의를 남겨주세요 (최소 10자 이상)</string>
    <string name="question_write_photo_caption">사진 등록하기</string>
    <string name="question_write_secret">비밀글로 문의하기</string>
    <string name="question_write_apply">등록하기</string>
    <string name="question_write_guide1">결제 이후 문의는 아이페이지>주문/배송내역에서 진행하시면 더욱 빠르게 답변을 받으실 수 있습니다.</string>
    <string name="question_write_guide1_b">아이페이지>주문/배송내역</string>
    <string name="question_write_guide2">작성된 문의는 답변이 등록되기 전까지만 내용 수정 또는 삭제가 가능하며, 답변이 등록되면 공개글 <![CDATA[<->]]> 비밀글 전환만 가능합니다.</string>
    <string name="question_write_guide2_b">공개글 <![CDATA[<->]]> 비밀글 전환만</string>
    <string name="question_history_title">나의 문의</string>
    <string name="question_edit_title">문의 수정</string>
    <string name="question_edit_apply">수정하기</string>
    <string name="question_edit_photo">사진 수정하기</string>
    <string name="point_title">포인트</string>
    <string name="point_caption">포인트</string>
    <string name="point_unit">%sP</string>
    <string name="point_plus">+%sP</string>
    <string name="point_minus">-%sP</string>
    <string name="point_expire">%s 소멸예정</string>
    <string name="point_empty">포인트 내역이 없습니다.</string>
    <string name="coupon_title">쿠폰</string>
    <string name="coupon_info">쿠폰 사용 시 유의사항</string>
    <string name="coupon_regist_code">쿠폰 번호 등록하기</string>
    <string name="coupon_regist_qr">QR코드 등록하기</string>
    <string name="coupon_empty">보유한 쿠폰이 없습니다.</string>
    <string name="coupon_use_condition">%s원 이상 구매시 사용가능</string>
    <string name="coupon_date">%s ~ %s</string>
    <string name="coupon_end">사용만료</string>
    <string name="shoppingbag_title">장바구니</string>
    <string name="shoppingbag_selected_count">전체선택 (%d/%d)</string>
    <string name="shoppingbag_delete">선택삭제</string>
    <string name="shoppingbag_goods_option">%s / %s</string>
    <string name="shoppingbag_shipping_free">무료배송</string>
    <string name="shoppingbag_shipping_free_condition">(%d만원 이상 무료배송)</string>
    <string name="shoppingbag_remain_shipping_free">%s원 더 구입 시 무료배송</string>
    <string name="shoppingbag_remain_shipping_free_bold">%s원</string>
    <string name="shoppingbag_remain_shipping_free_purple">무료배송</string>
    <string name="shoppingbag_final_shipping_price">+ %s</string>
    <string name="order_complete_title">주문 완료</string>
    <string name="order_complete_desc">주문이 완료되었습니다.</string>
    <string name="order_complete_order_history">주문목록 보기</string>
    <string name="order_complete_shipping">계속 쇼핑하기</string>
    <string name="challenge_enter_title">신청하기</string>
    <string name="challenge_enter_tel_caption">연락처</string>
    <string name="challenge_enter_tel_hint">등록된 연락처가 없습니다.</string>
    <string name="challenge_enter_tel_certify">인증하기</string>
    <string name="challenge_enter_sns_caption">SNS 주소 및 계정</string>
    <string name="challenge_enter_sns_desc">후기를 남겨주실 SNS정보를  하나 이상 적어주세요.</string>
    <string name="challenge_enter_sns_instagram">인스타그램</string>
    <string name="challenge_enter_sns_instagram_hint">계정을 입력하세요.</string>
    <string name="challenge_enter_sns_blog">블로그</string>
    <string name="challenge_enter_sns_blog_hint">주소를 입력하세요.</string>
    <string name="challenge_enter_notice">챌린지 서비스 약관 (제3장) 및 유의사항을 확인했습니다.</string>
    <string name="challenge_enter_notice_more">약관보기</string>
    <string name="challenge_enter_apply">신청하기</string>
    <string name="dialog_ok">확인</string>
    <string name="dialog_update_title">업데이트 알림</string>
    <string name="dialog_update_content">필수 업데이트가 있습니다\n새로운 버전의 미니룩을 만나보세요</string>
    <string name="dialog_update_desc">원할한 서비스 이용을 위해 업데이트 후, 다시 시작하시기 바랍니다</string>
</resources>