<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.minilook.minilook.ui.base.widget.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:setTitle="@string/challenge_enter_title"
        app:showBack="true"
        app:showTitle="true" />

    <TextView
        android:id="@+id/txt_tel_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_12"
        android:fontFamily="@font/nanum_square_r"
        android:text="@string/challenge_enter_tel_caption"
        android:textColor="@color/color_FF232323"
        android:textSize="@dimen/sp_7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlebar" />

    <TextView
        android:id="@+id/txt_tel"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/bg_button_border_lightgray"
        android:gravity="center_vertical"
        android:hint="@string/challenge_enter_tel_hint"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8"
        android:textColor="@color/color_FF424242"
        android:textColorHint="@color/color_FFDBDBDB"
        android:textSize="@dimen/sp_6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txt_certify"
        app:layout_constraintTop_toBottomOf="@+id/txt_tel_caption" />

    <TextView
        android:id="@+id/txt_certify"
        android:layout_width="@dimen/dp_34"
        android:layout_height="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@color/color_FF8140E5"
        android:fontFamily="@font/nanum_square_r"
        android:gravity="center"
        android:text="@string/challenge_enter_tel_certify"
        android:textColor="@color/color_FFFFFFFF"
        android:textSize="@dimen/sp_6"
        app:layout_constraintBottom_toBottomOf="@+id/txt_tel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_tel" />

    <TextView
        android:id="@+id/txt_sns_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:fontFamily="@font/nanum_square_r"
        android:text="@string/challenge_enter_sns_caption"
        android:textColor="@color/color_FF232323"
        android:textSize="@dimen/sp_7"
        app:layout_constraintLeft_toLeftOf="@+id/txt_tel"
        app:layout_constraintTop_toBottomOf="@+id/txt_tel" />

    <TextView
        android:id="@+id/txt_sns_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginEnd="@dimen/dp_10"
        android:fontFamily="@font/nanum_square_r"
        android:text="@string/challenge_enter_sns_desc"
        android:textColor="@color/color_FFA9A9A9"
        android:textSize="@dimen/sp_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sns_caption" />

    <TextView
        android:id="@+id/txt_instagram_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_14"
        android:fontFamily="@font/nanum_square_r"
        android:text="@string/challenge_enter_sns_instagram"
        android:textColor="@color/color_FF232323"
        android:textSize="@dimen/sp_6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sns_desc" />

    <EditText
        android:id="@+id/edit_instagram"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_26"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_10"
        android:gravity="center_vertical"
        android:hint="@string/challenge_enter_sns_instagram_hint"
        android:inputType="text"
        android:paddingStart="@dimen/dp_5"
        android:paddingEnd="@dimen/dp_5"
        android:textColor="@color/color_FF232323"
        android:textColorHint="@color/color_FFA9A9A9"
        android:textSize="@dimen/sp_6"
        app:layout_constraintBottom_toBottomOf="@+id/txt_instagram_caption"
        app:layout_constraintLeft_toRightOf="@+id/txt_instagram_caption"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_instagram_caption"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/txt_blog_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_18"
        android:fontFamily="@font/nanum_square_r"
        android:text="@string/challenge_enter_sns_blog"
        android:textColor="@color/color_FF232323"
        android:textSize="@dimen/sp_6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_instagram_caption" />

    <EditText
        android:id="@+id/edit_blog"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_26"
        android:layout_marginEnd="@dimen/dp_10"
        android:gravity="center_vertical"
        android:hint="@string/challenge_enter_sns_blog_hint"
        android:inputType="text"
        android:paddingStart="@dimen/dp_5"
        android:paddingEnd="@dimen/dp_5"
        android:textColor="@color/color_FF232323"
        android:textColorHint="@color/color_FFA9A9A9"
        android:textSize="@dimen/sp_6"
        app:layout_constraintBottom_toBottomOf="@+id/txt_blog_caption"
        app:layout_constraintLeft_toLeftOf="@+id/edit_instagram"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_blog_caption"
        tools:ignore="Autofill" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@color/color_FFA9A9A9"
        app:layout_constraintTop_toBottomOf="@+id/edit_blog" />

    <ImageView
        android:id="@+id/img_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_8"
        android:padding="@dimen/dp_4"
        android:src="@drawable/ic_checkbox_circle_off"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt_notice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        android:fontFamily="@font/nanum_square_r"
        android:text="@string/challenge_enter_notice"
        android:textColor="@color/color_FF232323"
        android:textSize="@dimen/sp_6"
        app:layout_constraintBottom_toBottomOf="@+id/img_checkbox"
        app:layout_constraintLeft_toRightOf="@+id/img_checkbox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_checkbox" />

    <TextView
        android:id="@+id/txt_notice_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_2"
        android:fontFamily="@font/nanum_square_b"
        android:paddingStart="@dimen/dp_10"
        android:paddingTop="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_4"
        android:text="@string/challenge_enter_notice_more"
        android:textColor="@color/color_FF8140E5"
        android:textSize="@dimen/sp_6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_notice" />

    <TextView
        android:id="@+id/txt_apply"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_28"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@color/color_FFF5F5F5"
        android:fontFamily="@font/nanum_square_eb"
        android:gravity="center"
        android:text="@string/challenge_enter_apply"
        android:textColor="@color/color_FFFFFFFF"
        android:textSize="@dimen/sp_9"
        app:layout_constraintTop_toBottomOf="@+id/txt_notice_more" />
</androidx.constraintlayout.widget.ConstraintLayout>