<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_160"
    android:layout_height="wrap_content"
    android:background="@color/color_FFFFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_22"
            android:fontFamily="@font/nanum_square_b"
            android:text="@string/dialog_update_title"
            android:textColor="@color/color_FF232323"
            android:textSize="@dimen/sp_10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/nanum_square_r"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/dialog_update_content"
            android:textColor="@color/color_FF232323"
            android:textSize="@dimen/sp_8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_22"
            android:bufferType="spannable"
            android:fontFamily="@font/nanum_square_b"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/dialog_update_desc"
            android:textColor="@color/color_FF232323"
            android:textSize="@dimen/sp_6" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_FFDBDBDB" />

    <TextView
        android:id="@+id/txt_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_28"
        android:fontFamily="@font/nanum_square_b"
        android:gravity="center"
        android:text="@string/dialog_ok"
        android:textColor="@color/color_FF6200EA"
        android:textSize="@dimen/sp_8" />
</LinearLayout>