<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:src="@drawable/ic_check_purple"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_16"
        android:fontFamily="@font/nanum_square_eb"
        android:text="@string/order_complete_title"
        android:textColor="@color/color_FF232323"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:fontFamily="@font/nanum_square_b"
        android:text="@string/order_complete_desc"
        android:textColor="@color/color_FF232323"
        android:textSize="@dimen/sp_10" />

    <TextView
        android:id="@+id/txt_order_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/bg_button_border_darkgray"
        android:fontFamily="@font/nanum_square_b"
        android:gravity="center"
        android:text="@string/order_complete_order_history"
        android:textColor="@color/color_FF232323"
        android:textSize="@dimen/sp_7" />

    <TextView
        android:id="@+id/txt_shopping"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@color/color_FF8140E5"
        android:fontFamily="@font/nanum_square_b"
        android:gravity="center"
        android:text="@string/order_complete_shipping"
        android:textColor="@color/color_FFFFFFFF"
        android:textSize="@dimen/sp_7" />
</LinearLayout>